# idgend

./: .gitignore  .rustfmt.toml  Cargo.toml  Dockerfile  LICENSE  README.md  build.rs  docker-compose.yml  go.mod  main.go
meta/: distribution.drawio  process.drawio
proto/: idgen.proto
src/: app.rs  args.rs  elect.rs  etcd.rs  http.rs  id.rs  lock.rs  log.rs  main.rs  rt.rs  shard.rs  state.rs  utils.rs
