[package]
name = "idgend"
version = "1.0.0-dev"
authors = ["jmjoy <jmjoy@apache.org>"]
edition = "2021"
readme = "README.md"
license = "Apache-2.0"
description = "Simple and powerful distributed ID generator."

[dependencies]
anyhow = "1.0.66"
axum = "0.5.17"
rand = "0.8.5"
rocksdb = "0.19.0"
tokio = { version = "1.22.0", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"

[build-dependencies]
anyhow = "1.0.66"
tonic-build = "0.8.2"
