[package]
name = "idgend"
version = "1.0.0-dev"
authors = ["jmjoy <jmjoy@apache.org>"]
edition = "2021"
readme = "README.md"
license = "Apache-2.0"
description = "A simple and brute-force service for generating unique and pure digital IDs."
rust-version = "1.68"

[dependencies]
anyhow = { version = "1.0.71", features = ["backtrace"] }
axum = "0.6.18"
clap = { version = "4.2.7", features = ["derive"] }
etcd-client = "0.11.1"
flume = "0.10.14"
futures = "0.3.28"
once_cell = "1.17.1"
rand = "0.8.5"
rayon = "1.7.0"
serde = { version = "1.0.162", features = ["derive"] }
sled = "0.34.7"
tokio = { version = "1.28.0", features = ["full"] }
tonic = "0.9.2"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
twox-hash = "1.6.3"

[build-dependencies]
anyhow = "1.0.71"
tonic-build = "0.9.2"
