[package]
name = "idgend"
version = "1.0.0"
authors = ["jmjoy <jmjoy@apache.org>"]
edition = "2021"
readme = "README.md"
license = "Apache-2.0"
description = "A simple and brute-force service for generating unique and pure digital IDs."
rust-version = "1.68"

[dependencies]
anyhow = { version = "1.0.79", features = ["backtrace"] }
arc-swap = "1.6.0"
axum = "0.7.4"
clap = { version = "4.3.24", features = ["derive"] }
etcd-client = "0.12.4"
flume = "0.11.0"
futures = "0.3.30"
once_cell = "1.19.0"
rand = { version = "0.8.5", features = ["small_rng"] }
reqwest = "0.11.24"
serde = { version = "1.0.196", features = ["derive"] }
tokio = { version = "1.35.1", features = ["full"] }
tonic = "0.10.2"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
url = "2.5.0"
